--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,11 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Concurrent)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Concurrent)
 
 set(PROJECT_SOURCES
         main.cpp
-        spectrogramautomation.ui
         resources.qrc
         dialog.h
         dialog.cpp
@@ -48,7 +47,7 @@ else()
     endif()
 endif()
 
-target_link_libraries(SpectrogramAutomation PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(SpectrogramAutomation PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Concurrent)
 
 set_target_properties(SpectrogramAutomation PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
